data/derived/fa15/progs/unify/prog2441.ml.out
Characters 40-43:
  let f a x = fun c x -> a (a) in
                           ^^^
Error: This expression has type 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b
